@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<window type="dialog" id="3002">
+    <allowoverlay>no</allowoverlay>
+    <onload>Dialog.Close(all,true)</onload>
+    <visible>Window.IsActive(5001) + !player.hasaudio</visible>
+    <controls></controls>
+</window>
