@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<window type="dialog" id="3001">
+    <allowoverlay>no</allowoverlay>
+    <onload condition="!Window.IsActive(visualisation)">FullScreen</onload>
+    <visible>Player.HasAudio + skin.hassetting(startVisualiserOnPlayback)</visible>
+    <controls></controls>
+</window>
